Grease Pencil Layer synchronization between Dope Sheet and Properties panel #50184

Closed
opened 2016-12-05 03:00:57 +01:00 by Bun ny · 6 comments

System Information
Windows 7 x64
NVIDIA GeForce GTX 580

Blender Version
Broken: 2.78a e8299c8

Short description of error
Selection of Grease Pencil Layers not properly synchronized between Dope Sheet and Properties panel.

Exact steps for others to reproduce the error
Open new .blend file, open a Dope Sheet editor and switch to Grease Pencil context, open the Properties region in 3D View, and create two Grease Pencil Layers. Select a Grease Pencil layer in the Dope Sheet and that layer is synchronously selected in the Properties panel, but select a layer in the Properties panel and the selected layer in the Dope Sheet does not change.

This lack of synchronization makes it easy to accidentally draw on the wrong layer. It feels like selecting a layer in the Properties panel should behave like selecting a layer in the Dope Sheet, automatically selecting the layer in the Dope Sheet editor as well.

gpencil_sync.blend

Not sure if this is actually a bug; hope this is the right place.

**System Information** Windows 7 x64 NVIDIA GeForce GTX 580 **Blender Version** Broken: 2.78a e8299c8 **Short description of error** Selection of Grease Pencil Layers not properly synchronized between Dope Sheet and Properties panel. **Exact steps for others to reproduce the error** Open new .blend file, open a Dope Sheet editor and switch to Grease Pencil context, open the Properties region in 3D View, and create two Grease Pencil Layers. Select a Grease Pencil layer in the Dope Sheet and that layer is synchronously selected in the Properties panel, but select a layer in the Properties panel and the selected layer in the Dope Sheet does not change. This lack of synchronization makes it easy to accidentally draw on the wrong layer. It feels like selecting a layer in the Properties panel should behave like selecting a layer in the Dope Sheet, automatically selecting the layer in the Dope Sheet editor as well. [gpencil_sync.blend](https://archive.blender.org/developer/F414253/gpencil_sync.blend) Not sure if this is actually a bug; hope this is the right place.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bunny

Added subscriber: @bunny

Added subscribers: @antoniov, @JoshuaLeung, @mont29

Added subscribers: @antoniov, @JoshuaLeung, @mont29
Antonio Vazquez was assigned by Bastien Montagne 2016-12-09 10:11:22 +01:00

@antoniov or @JoshuaLeung, mind to check? thanks. :)

@antoniov or @JoshuaLeung, mind to check? thanks. :)
Antonio Vazquez was unassigned by Joshua Leung 2016-12-09 10:54:36 +01:00
Joshua Leung self-assigned this 2016-12-09 10:54:36 +01:00

This issue was referenced by c5338fd162

This issue was referenced by c5338fd1620d387c9f5a2db9904ee3d950a0e787
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50184
No description provided.