Fix T50184: Grease Pencil Layer synchronization between Dope Sheet and Properties panel